--- a/.github/workflows/ci-cd-python-app.yml
+++ b/.github/workflows/ci-cd-python-app.yml
@@ -64,6 +64,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
+    env:
+      PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+      GKE_CLUSTER: ucu-devops-blue-green
+      GKE_REGION: us-central1
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -73,13 +77,18 @@ jobs:
         with:
           kustomize-version: "3.6.1"
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      # Alternative option - authentication via credentials json
+      - name: Authenticate to Google Cloud
+        uses: 'google-github-actions/auth@v0'
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
+
+      - name: Get the GKE credentials so we can deploy to the cluster
+        run: |
+          gcloud container clusters get-credentials "$GKE_CLUSTER" --region "$GKE_REGION"
       - name: Create namespace & set in Kustomize
         run: |
           namespacePresentBlue=`kubectl get ns | grep python-app-blue | wc -l`
@@ -105,10 +114,6 @@ jobs:
       - name: Update Kubernetes resources
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-          cluster_name: ucu-devops-blue-green
         run: |
           cd k8s
           kustomize edit set image blue-green=$DOCKER_USERNAME/blue-green:$GITHUB_SHA
